<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitlePage">

    <TableLayout
        android:id="@+id/titlePage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C9ADA7"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/btnLanguageMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#00FFFFFF"
                android:fontFamily="@font/montserrat"
                android:maxWidth="120dp"
                android:singleLine="true"
                android:text="@string/language"
                android:textAllCaps="false"
                android:textColor="#22223B"
                android:textSize="14sp"
                app:iconPadding="4dp" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".2">

            <LinearLayout
                android:id="@+id/vertical5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/piTV"
                    android:layout_width="match_parent"
                    android:layout_height="196dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="50"
                    android:height="150dp"
                    android:background="@drawable/circle_textview"
                    android:fontFamily="@font/chewy"
                    android:gravity="center"
                    android:text="@string/pi"
                    android:textAlignment="center"
                    android:textColor="@color/dark_purple"
                    android:textSize="80sp" />

                <LinearLayout
                    android:id="@+id/horizontal0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pizzaTV"
                        android:layout_width="match_parent"
                        android:layout_height="111dp"
                        android:layout_gravity="bottom"
                        android:height="150dp"
                        android:fontFamily="@font/chewy"
                        android:gravity="start"
                        android:text="@string/pizza"
                        android:textAlignment="textStart"
                        android:textColor="@color/dark_purple"
                        android:textSize="80sp" />

                    <TextView
                        android:id="@+id/sarahTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alegreya_sans_sc_bold"
                        android:text="@string/sarah"
                        android:textAlignment="center"
                        android:textColor="@color/blush_purple"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center_vertical"
            android:paddingBottom="100dp">

            <Button
                android:id="@+id/btnStart"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:height="60dp"
                android:backgroundTint="@color/dark_purple"
                android:fontFamily="@font/montserrat"
                android:insetLeft="10dp"
                android:insetRight="10dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="25dp" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="60dp"
                android:backgroundTint="@color/dark_purple"
                android:fontFamily="@font/montserrat"
                android:insetLeft="10dp"
                android:insetRight="10dp"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="30dp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>