<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blush"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/btnLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="end"
                android:background="#00FFFFFF"
                android:fontFamily="@font/montserrat"
                android:maxWidth="120dp"
                android:singleLine="true"
                android:text="@string/language"
                android:textAllCaps="false"
                android:textColor="#22223B"
                android:textSize="14sp"
                app:iconPadding="4dp" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".05">

            <TextView
                android:id="@+id/orderNumTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_span="2"
                android:fontFamily="@font/montserrat"
                android:paddingStart="25dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/history"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/vertical2_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:layout_weight="100"
                android:background="@drawable/rounded_textview_cream"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="12dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/blush_purple"
                    app:cardCornerRadius="5dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/orderTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_deselected"
                        android:clickable="true"
                        android:fontFamily="@font/montserrat"
                        android:onClick="onClick"
                        android:padding="10dp"
                        android:text="@string/exampleOrder"
                        android:textColor="@color/blush_purple"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/garbageImg"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="bottom"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/garbagebag_grey" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".01">

            <Button
                android:id="@+id/btnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_purple"
                android:fontFamily="@font/montserrat"
                android:insetLeft="25dp"
                android:insetRight="10dp"
                android:text="@string/view"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="25dp" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_purple"
                android:fontFamily="@font/montserrat"
                android:insetLeft="10dp"
                android:insetRight="25dp"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="25dp" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <Button
                android:id="@+id/btnNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:backgroundTint="@color/dark_purple"
                android:fontFamily="@font/montserrat"
                android:text="@string/newOrder"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="25dp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>