<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    app:layout_insetEdge="none">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blush"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btnLanguage"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:backgroundTint="#00FFFFFF"
                android:fontFamily="@font/montserrat"
                android:gravity="right"
                android:text="@string/language"
                android:textAllCaps="false"
                android:textColor="@color/dark_purple" />

        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".05">

            <TextView
                android:id="@+id/orderNumTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="100"
                android:fontFamily="@font/montserrat"
                android:paddingStart="25dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/orderNum"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:background="@drawable/rounded_textview_cream"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/vertical2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_selected"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/btnList"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="right"
                            android:backgroundTint="#00FFFFFF"
                            android:scaleType="fitEnd"
                            app:srcCompat="@drawable/list"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                        <ImageButton
                            android:id="@+id/btnEdit"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="right"
                            android:backgroundTint="#00FFFFFF"
                            android:scaleType="fitEnd"
                            app:srcCompat="@drawable/edit_text"
                            tools:ignore="DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/detailsTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:fontFamily="@font/montserrat"
                        android:padding="5dp"
                        android:text="@string/exampleDetails"
                        android:textColor="@color/blush_purple"
                        android:visibility="visible"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>
            </ScrollView>

        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingTop="15dp">

            <Button
                android:id="@+id/btnNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/dark_purple"
                android:fontFamily="@font/montserrat"
                android:text="@string/newOrder"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="25dp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>